# sing-box-config

./: .gitignore‎  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
src/cli/: commands.py  main.py  models.py  utils.py
src/rules/: android-packages.json  anthropic.json  discord.json  ext.json  github.json  google-ai.json  google-android-packages.json  google.json  jetbrains.json  spotify.json  steam.json  telegram-linux.json  telegram.json  youtube.json
